chore(prettier): styling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="utf-8" />
     <title>Matthew Kempey's Portfolio</title>
     <style>
-      img { clip-path: circle(); float: right; width: 250px; height: 250px;}
+      img {
+        clip-path: circle();
+        float: right;
+        width: 250px;
+        height: 250px;
+      }
     </style>
   </head>
 
@@ -19,18 +24,22 @@
     <strong>Full Stack Technical Architect</strong>
 
     <section>
-      <h3>Contact</h4>
-      <p><a href="mailto:mkempey@gmail.com">Email</a> | <a href="https://github.com/matt4885">GitHub</a> | <a href="">LinkedIn</a></p>
+      <h3>Contact</h3>
+      <p>
+        <a href="mailto:mkempey@gmail.com">Email</a> |
+        <a href="https://github.com/matt4885">GitHub</a> |
+        <a href="">LinkedIn</a>
+      </p>
     </section>
     <section>
       <h1>About</h1>
       <p>
         I am a Technical Architect with many years of experience designing and
         developing full stack, business oriented applications. I have four years
-        of experience running and leading software development teams to deliver quality software on
-        time. I mostly work with React, TypeScript, Node.js, .NET and MongoDB. I
-        also have previous experience with SQL Server, PostgreSQL, Python 3 and
-        Rust.
+        of experience running and leading software development teams to deliver
+        quality software on time. I mostly work with React, TypeScript, Node.js,
+        .NET and MongoDB. I also have previous experience with SQL Server,
+        PostgreSQL, Python 3 and Rust.
       </p>
     </section>
 
@@ -114,6 +123,5 @@
         <li>Data Structures and Algorithms</li>
       </ul>
     </section>
-
   </body>
 </html>
