feat(linkedin): add linkedin

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <p>
         <a href="mailto:mkempey@gmail.com">Email</a> |
         <a href="https://github.com/matt4885">GitHub</a> |
-        <a href="">LinkedIn</a>
+        <a href="https://linkedin.com/in/matthewkempey">LinkedIn</a>
       </p>
     </section>
     <section>
